--- a/Revels'15/CellOptionView.xib
+++ b/Revels'15/CellOptionView.xib
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -16,10 +17,6 @@
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="1xW-Q3-XsS">
                             <rect key="frame" x="8" y="20" width="294" height="21"/>
-                            <constraints>
-                                <constraint firstAttribute="width" constant="294" id="628-lt-7PN"/>
-                                <constraint firstAttribute="height" constant="21" id="uVn-ln-p8q"/>
-                            </constraints>
                             <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="22"/>
                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <nil key="highlightedColor"/>
@@ -27,18 +24,15 @@
                     </subviews>
                     <color key="backgroundColor" red="0.1450980392" green="0.63921568630000003" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="62" id="0Ae-Pe-9M9"/>
-                        <constraint firstAttribute="centerX" secondItem="1xW-Q3-XsS" secondAttribute="centerX" id="FgV-nx-BiT"/>
-                        <constraint firstItem="1xW-Q3-XsS" firstAttribute="top" secondItem="KvY-uW-dkM" secondAttribute="top" constant="20" id="Nrb-zu-gsz"/>
-                        <constraint firstAttribute="width" constant="310" id="UWV-KW-GGa"/>
+                        <constraint firstItem="1xW-Q3-XsS" firstAttribute="top" secondItem="KvY-uW-dkM" secondAttribute="top" constant="20" id="17k-Ng-lEh"/>
+                        <constraint firstItem="1xW-Q3-XsS" firstAttribute="trailing" secondItem="KvY-uW-dkM" secondAttribute="trailingMargin" id="Gei-Q1-Ec1"/>
+                        <constraint firstItem="1xW-Q3-XsS" firstAttribute="leading" secondItem="KvY-uW-dkM" secondAttribute="leadingMargin" id="Ysu-kK-m3y"/>
+                        <constraint firstAttribute="bottom" secondItem="1xW-Q3-XsS" secondAttribute="bottom" constant="21" id="ab4-Cu-8DV"/>
                     </constraints>
                 </view>
                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="YOLOSWAG" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="9Hg-Lc-7yX">
                     <rect key="frame" x="0.0" y="61" width="310" height="261"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="261" id="jds-gx-hH9"/>
-                    </constraints>
                     <color key="textColor" red="0.1450980392" green="0.63921568630000003" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
                     <fontDescription key="fontDescription" name="Helvetica-Light" family="Helvetica" pointSize="22"/>
                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -48,7 +42,7 @@
                     <rect key="frame" x="37" y="336" width="237" height="40"/>
                     <color key="backgroundColor" red="0.1450980392" green="0.63921568630000003" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="237" id="5ij-PJ-HOQ"/>
+                        <constraint firstAttribute="height" constant="40" id="3RY-k9-q6E"/>
                     </constraints>
                     <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="18"/>
                     <state key="normal" title="ADD TO FOLLOWING">
@@ -59,16 +53,17 @@
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="9Hg-Lc-7yX" firstAttribute="leading" secondItem="KvY-uW-dkM" secondAttribute="leading" id="02R-TU-IGV"/>
-                <constraint firstAttribute="centerX" secondItem="krZ-F2-PED" secondAttribute="centerX" id="IlC-zQ-iss"/>
-                <constraint firstItem="KvY-uW-dkM" firstAttribute="top" secondItem="IG8-OH-BQd" secondAttribute="top" id="NDR-eG-VKM"/>
-                <constraint firstItem="KvY-uW-dkM" firstAttribute="leading" secondItem="IG8-OH-BQd" secondAttribute="leading" id="OBK-3W-icX"/>
-                <constraint firstItem="9Hg-Lc-7yX" firstAttribute="trailing" secondItem="KvY-uW-dkM" secondAttribute="trailing" id="fDn-sW-GYu"/>
-                <constraint firstAttribute="bottom" secondItem="krZ-F2-PED" secondAttribute="bottom" constant="8" id="h1G-3b-KQd"/>
-                <constraint firstItem="krZ-F2-PED" firstAttribute="top" secondItem="9Hg-Lc-7yX" secondAttribute="bottom" constant="14" id="irB-nc-jyq"/>
-                <constraint firstAttribute="trailing" secondItem="KvY-uW-dkM" secondAttribute="trailing" id="oHZ-oL-KmD"/>
-                <constraint firstAttribute="centerX" secondItem="KvY-uW-dkM" secondAttribute="centerX" id="pOT-Oq-Mfx"/>
-                <constraint firstItem="9Hg-Lc-7yX" firstAttribute="top" secondItem="IG8-OH-BQd" secondAttribute="top" constant="61" id="pcm-gi-Kc9"/>
+                <constraint firstAttribute="trailing" secondItem="9Hg-Lc-7yX" secondAttribute="trailing" id="8KM-VO-CeB"/>
+                <constraint firstItem="krZ-F2-PED" firstAttribute="leading" secondItem="IG8-OH-BQd" secondAttribute="leading" constant="37" id="CxP-et-aCO"/>
+                <constraint firstItem="9Hg-Lc-7yX" firstAttribute="leading" secondItem="KvY-uW-dkM" secondAttribute="leading" id="FXG-nU-hD9"/>
+                <constraint firstItem="9Hg-Lc-7yX" firstAttribute="top" secondItem="IG8-OH-BQd" secondAttribute="top" constant="61" id="O5i-Je-mEA"/>
+                <constraint firstItem="KvY-uW-dkM" firstAttribute="top" secondItem="IG8-OH-BQd" secondAttribute="top" id="OIh-Yt-nXz"/>
+                <constraint firstItem="krZ-F2-PED" firstAttribute="bottom" secondItem="IG8-OH-BQd" secondAttribute="bottomMargin" id="SW1-DJ-Ebl"/>
+                <constraint firstItem="9Hg-Lc-7yX" firstAttribute="trailing" secondItem="KvY-uW-dkM" secondAttribute="trailing" id="Tgk-WE-Ywq"/>
+                <constraint firstItem="krZ-F2-PED" firstAttribute="centerX" secondItem="9Hg-Lc-7yX" secondAttribute="centerX" id="bkJ-3k-Gyh"/>
+                <constraint firstItem="krZ-F2-PED" firstAttribute="top" secondItem="9Hg-Lc-7yX" secondAttribute="bottom" constant="14" id="lfq-SW-lSb"/>
+                <constraint firstAttribute="bottom" secondItem="KvY-uW-dkM" secondAttribute="bottom" constant="322" id="mIc-At-lvQ"/>
+                <constraint firstItem="KvY-uW-dkM" firstAttribute="leading" secondItem="IG8-OH-BQd" secondAttribute="leading" id="zOI-6T-60G"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
